Task instance Java/73